<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MovieSubmissionExpert</string>
    <string name="title_home">Home</string>
    <string name="label_location">Your Location</string>
    <string name="location">Palembang</string>
    <string name="label_now_playing">Now Playing</string>
    <string name="view_all">View All</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="duration">Duration</string>
    <string name="director">Director</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="score">Score</string>
    <string name="synopsis">Synopsis</string>
    <string name="choose_seat_s">Choose Seat(s)</string>
    <string name="selected">Selected</string>
    <string name="taken">Taken</string>
    <string name="available">Available</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="txt_continue">Continue</string>
    <string name="total_seats" tools:ignore="PluralsCandidate">%d Seats</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="total_price">Total Price</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="cinema">Cinema</string>
    <string name="type">Type</string>
    <string name="seat">Seat</string>
    <string name="price_detail">Price Detail</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="promo">Promo &amp; Voucher</string>
    <string name="enter_promo_code_or_voucher">Enter promo code or voucher</string>
    <string name="cinepolis">Cinepolis</string>
    <string name="standard">Standard</string>
    <string name="service_fee">Service Fee</string>
    <string name="promo_discount_label">Promo (%s)</string>
    <string name="promo_discount">- Rp%s</string>
    <string name="exit">exit</string>
    <string name="ticket">Ticket</string>
    <string name="duration_minutes" tools:ignore="PluralsCandidate">%d mins</string>
    <string name="total_person_seats">%d Person</string>
    <string name="rating_ticket">R %s</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="my_tickets">My Tickets</string>
    <string name="dot">•</string>
    <string name="null_ticket">Yaah,, nggak ada tiket :(</string>
    <string name="remind_me">Remind me 1 hours earlier</string>
    <string name="upcoming">Upcoming</string>
    <string name="passed">Passed</string>
    <string name="watch_list">Watch List</string>
    <string name="watch_list_null">Yahh,, watch list kamu kosong nih</string>
    <string name="caster_character">(%1$s)</string>
    <string name="interval_time_movie">%1$s - %2$s</string>
    <string name="cast">Cast</string>
    <string name="empty_search">Film yang kamu cari tidak ada</string>
    <string name="title_watch_list">Watch List</string>
    <string name="null_text">$s</string>
</resources>