<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <TextView
        android:id="@+id/tv_label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/label_location"
        android:textColor="@color/grey"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/location"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/tv_label_location"
        app:layout_constraintTop_toBottomOf="@id/tv_label_location" />

    <TextView
        android:id="@+id/tv_label_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/label_now_playing"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />

    <TextView
        android:id="@+id/tv_view_all_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/view_all"
        android:textColor="@color/red_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_label_now_playing" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_now_playing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-16dp"
        android:orientation="horizontal"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_view_all_now_playing"
        tools:itemCount="4"
        tools:listitem="@layout/item_movie_small" />

    <TextView
        android:id="@+id/tv_label_coming_soon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/coming_soon"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_now_playing" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/view_all"
        android:textColor="@color/red_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_label_coming_soon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_coming_soon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-16dp"
        android:orientation="horizontal"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_coming_soon"
        tools:itemCount="4"
        tools:listitem="@layout/item_movie_small" />

</androidx.constraintlayout.widget.ConstraintLayout>